Update logic API
